[package]
name = "bacnet_macros"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/Heliopshan/bacnet-rs"
repository = "https://github.com/Heliopshan/bacnet-rs"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.105"
quote = "1.0.43"
syn = "2.0.114"
